--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -39,10 +39,10 @@ jobs:
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-    # Run az commands to confirm sub access
-    - name: 'Run az commands'
-      run: |
-        az account show
+    # # Run az commands to confirm sub access
+    # - name: 'Run az commands'
+    #   run: |
+    #     az account show
 
     # Run Terraform init
     - name: Terraform Init
@@ -54,7 +54,8 @@ jobs:
         # ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
         # ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         # ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-      run: terraform init -backend-config="storage_account_name=$STORAGE_ACCOUNT" -backend-config="container_name=$CONTAINER_NAME" -backend-config="resource_group_name=$RESOURCE_GROUP_NAME"
+      run: terraform init -backend=false
+      # run: terraform init -backend-config="storage_account_name=$STORAGE_ACCOUNT" -backend-config="container_name=$CONTAINER_NAME" -backend-config="resource_group_name=$RESOURCE_GROUP_NAME"
 
     - name: Terraform Validate
       run: terraform validate
