--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -31,13 +31,13 @@ jobs:
       with:
         terraform_version: ${{ secrets.TF_VERSION }}
       
-    # Log into Azure with OIDC integration
-    - name: 'Az CLI login'
-      uses: azure/login@v2
-      with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+    # # Log into Azure with OIDC integration
+    # - name: 'Az CLI login'
+    #   uses: azure/login@v2
+    #   with:
+    #     client-id: ${{ secrets.AZURE_CLIENT_ID }}
+    #     tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+    #     subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
     # # Run az commands to confirm sub access
     # - name: 'Run az commands'
