--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -64,6 +64,17 @@ jobs:
     - name: Terraform Format Check
       run: terraform fmt -check -recursive
       # working-directory: terraform/environments/${{ matrix.environment }}
+    
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v6
+      with:
+        python-version: 3.9
+    - name: Test with Checkov
+      id: checkov
+      uses: bridgecrewio/checkov-action@v12
+      with:
+        # directory: example/examplea # Optional
+        framework: terraform 
 
     # - name: Security Scan - Checkov
     #   run: checkov -d . --framework terraform --output cli --skip-check CKV_AZURE_50
