--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -64,17 +64,40 @@ jobs:
     - name: Terraform Format Check
       run: terraform fmt -check -recursive
       # working-directory: terraform/environments/${{ matrix.environment }}
+
+    - name: Cache plugin dir
+      uses: actions/cache@v4
+      with:
+        path: ~/.tflint.d/plugins
+        key: ${{ matrix.os }}-tflint-${{ hashFiles('.tflint.hcl') }}
+      
+    - name: Setup TFLint
+      uses: terraform-linters/setup-tflint@v4
+      with:
+        tflint_version: v0.52.0
+  
+    - name: Show version
+      run: tflint --version
+
+    - name: Init TFLint
+      run: tflint --init
+      env:
+          # https://github.com/terraform-linters/tflint/blob/master/docs/user-guide/plugins.md#avoiding-rate-limiting
+        GITHUB_TOKEN: ${{ github.token }}
+
+    - name: Run TFLint
+      run: tflint -f compact
     
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v6
-      with:
-        python-version: 3.9
-    - name: Test with Checkov
-      id: checkov
-      uses: bridgecrewio/checkov-action@v12
-      with:
-        # directory: example/examplea # Optional
-        framework: terraform 
+    # - name: Set up Python 3.9
+    #   uses: actions/setup-python@v6
+    #   with:
+    #     python-version: 3.9
+    # - name: Test with Checkov
+    #   id: checkov
+    #   uses: bridgecrewio/checkov-action@v12
+    #   with:
+    #     # directory: example/examplea # Optional
+    #     framework: terraform 
 
     # - name: Security Scan - Checkov
     #   run: checkov -d . --framework terraform --output cli --skip-check CKV_AZURE_50
