Update TFLint version to latest in GitHub Actions workflow

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -74,7 +74,7 @@ jobs:
     - name: Setup TFLint
       uses: terraform-linters/setup-tflint@v4
       with:
-        tflint_version: v0.52.0
+        tflint_version: latest
   
     - name: Show version
       run: tflint --version
