--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -109,16 +109,16 @@ jobs:
       with: 
         scan-type: 'fs' 
         scan-ref: '.'  # Path to your Terraform files  
-        # format: 'sarif'
+        format: 'sarif'
         scanners: 'vuln,secret,misconfig'
         severity: 'CRITICAL,HIGH,MEDIUM,LOW,UNKNOWN' 
         exit-code: 0
-        # output: 'trivy-terraform-results.sarif' 
+        output: 'trivy-terraform-results.sarif' 
 
-    # - name: Upload Trivy scan results to GitHub Security tab
-    #   uses: github/codeql-action/upload-sarif@v3
-    #   with:
-    #       sarif_file: 'trivy-terraform-results.sarif'
+    - name: Upload Trivy scan results to GitHub Security tab
+      uses: github/codeql-action/upload-sarif@v3
+      with:
+          sarif_file: 'trivy-terraform-results.sarif'
     
     # - name: Security Scan - TFSec
     #   run: tfsec .
