Update Checkov security scan step to output SARIF format and adjust workflow comments

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -92,17 +92,33 @@ jobs:
       uses: actions/setup-python@v6
       with:
         python-version: 3.9
-    - name: Test with Checkov
+    
+    - name: Security Scan - Checkov
       id: checkov
       uses: bridgecrewio/checkov-action@v12
       with:
         # directory: example/examplea # Optional
-        framework: terraform 
+        framework: terraform
+        # This will add both a CLI output to the console and create a results.sarif file
+        output_format: cli,sarif
+        output_file_path: console,results.sarif
+      
+    # - name: Upload Checkov SARIF file
+    #   uses: github/codeql-action/upload-sarif@v2
+      
+    #   # Results are generated only on a success or failure
+    #   # this is required since GitHub by default won't run the next step
+    #   # when the previous one has failed. Security checks that do not pass will 'fail'.
+    #   # An alternative is to add `continue-on-error: true` to the previous step
+    #   # Or 'soft_fail: true' to checkov.
+    #   if: success() || failure()
+    #   with:
+    #     sarif_file: results.sarif
 
-    - name: Security Scan - Checkov
-      run: checkov -d . --framework terraform --output cli --skip-check CKV_AZURE_50
-      continue-on-error: true
-      working-directory: terraform/environments/${{ matrix.environment }}
+    # - name: Security Scan - Checkov
+    #   run: checkov -d . --framework terraform --output cli --skip-check CKV_AZURE_50
+    #   continue-on-error: true
+    #   working-directory: terraform/environments/${{ matrix.environment }}
 
     - name: Scan Terraform  
       uses: aquasecurity/trivy-action@0.34.1
@@ -115,10 +131,11 @@ jobs:
         exit-code: 0
         output: 'trivy-terraform-results.sarif' 
 
-    - name: Upload Trivy scan results to GitHub Security tab
-      uses: github/codeql-action/upload-sarif@v4
-      with:
-        sarif_file: 'trivy-terraform-results.sarif'
+    ## Only available for org with CodeQL Advanced Security
+    # - name: Upload Trivy scan results to GitHub Security tab
+    #   uses: github/codeql-action/upload-sarif@v4
+    #   with:
+    #     sarif_file: 'trivy-terraform-results.sarif'
     
     # - name: Security Scan - TFSec
     #   run: tfsec .
