Comment out conditional execution for Checkov SARIF upload step

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -113,7 +113,7 @@ jobs:
       # when the previous one has failed. Security checks that do not pass will 'fail'.
       # An alternative is to add `continue-on-error: true` to the previous step
       # Or 'soft_fail: true' to checkov.
-      if: success() || failure()
+      # if: success() || failure()
       with:
         sarif_file: checkov-terraform-results.sarif
 
