--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -15,9 +15,10 @@ env:
 
 permissions:
       id-token: write
+      contents: read
+      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
       issues: write
       pull-requests: write
-      contents: read
 
 jobs: 
   terraform-plan:
@@ -31,7 +32,7 @@ jobs:
     steps:
     # Checkout the repository to the GitHub Actions runner
     - name: Checkout
-      uses: actions/checkout@v4
+      uses: actions/checkout@v6
 
     # Install the latest version of Terraform CLI 
     - name: Setup Terraform
@@ -42,7 +43,7 @@ jobs:
       
     # Log into Azure with OIDC integration
     - name: 'Az CLI login'
-      uses: azure/login@v1
+      uses: azure/login@v2
       with:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
@@ -55,7 +56,6 @@ jobs:
 
     # Run Terraform init
     - name: Terraform Init
-      id: init
       env:
         STORAGE_ACCOUNT: ${{ secrets.STORAGE_ACCOUNT }}
         CONTAINER_NAME: ${{ secrets.CONTAINER_NAME }}
@@ -68,18 +68,15 @@ jobs:
     # Run a Terraform fmt
     - name: Terraform format
       id: fmt
-      run: terraform fmt -check
+      run: terraform fmt -check -recursive
 
     # Run a Terraform validate
     - name: Terraform validate
-      id: validate
-      if: success() || failure()
       env:
         ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
         ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
       run: terraform validate -no-color
-
 
     # Generates an execution plan for Terraform
     # An exit code of 0 indicated no changes, 1 a terraform failure, 2 there are pending changes.
@@ -104,11 +101,28 @@ jobs:
         
     # Save plan to artifacts  
     - name: Publish Terraform Plan
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v6
       with:
         name: tfplan
         path: tfplan
     
+      # Create string output of Terraform Plan
+    - name: Create String Output
+      id: tf-plan-string
+      run: |
+        TERRAFORM_PLAN=$(terraform show -no-color tfplan)
+        
+        delimiter="$(openssl rand -hex 8)"
+        echo "summary<<${delimiter}" >> $GITHUB_OUTPUT
+        echo "## Terraform Plan Output" >> $GITHUB_OUTPUT
+        echo "<details><summary>Click to expand</summary>" >> $GITHUB_OUTPUT
+        echo "" >> $GITHUB_OUTPUT
+        echo '```terraform' >> $GITHUB_OUTPUT
+        echo "$TERRAFORM_PLAN" >> $GITHUB_OUTPUT
+        echo '```' >> $GITHUB_OUTPUT
+        echo "</details>" >> $GITHUB_OUTPUT
+        echo "${delimiter}" >> $GITHUB_OUTPUT
+
     # Publish Terraform Plan as task summary
     - name: Publish Terraform Plan to Task Summary
       env:
@@ -133,40 +147,75 @@ jobs:
                 body: body
             })
 
-  manual-approval:
-    name: Manual Approval
-    uses: trstringer/manual-approval@v1
-    with:
-      approvers: simon-vedder #user account of approvers
-      minimum-approvals: 1
-      issue-title: "Manual Approval Required for Terraform Apply"
+  # manual-approval:
+  #   name: Manual Approval
+  #   uses: trstringer/manual-approval@v1
+  #   with:
+  #     approvers: simon-vedder #user account of approvers
+  #     minimum-approvals: 1
+  #     issue-title: "Manual Approval Required for Terraform Apply"
       
-  terraform-apply:
-    name: 'Terraform Apply'
-    if: github.ref == 'refs/heads/main' && needs.terraform-plan.outputs.tfplanExitCode == 2
-    runs-on: ubuntu-latest
-    environment: production
-    needs: [terraform-plan, manual-approval]
+  # terraform-apply:
+  #   name: 'Terraform Apply'
+  #   if: github.ref == 'refs/heads/main' && needs.terraform-plan.outputs.tfplanExitCode == 2
+  #   runs-on: ubuntu-latest
+  #   needs: [terraform-plan, manual-approval]
     
-    steps:
-    # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v4
+  #   steps:
+  #   # Checkout the repository to the GitHub Actions runner
+  #   - name: Checkout
+  #     uses: actions/checkout@v4
 
-    # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v3
+  #   # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
+  #   - name: Setup Terraform
+  #     uses: hashicorp/setup-terraform@v3
 
-    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-    - name: Terraform Init
-      run: terraform init
+  #   # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+  #   - name: Terraform Init
+  #     run: terraform init
 
-    # Download saved plan from artifacts  
-    - name: Download Terraform Plan
-      uses: actions/download-artifact@v4
-      with:
-        name: tfplan
+  #   # Download saved plan from artifacts  
+  #   - name: Download Terraform Plan
+  #     uses: actions/download-artifact@v6
+  #     with:
+  #       name: tfplan
 
-    # Terraform Apply
-    - name: Terraform Apply
-      run: terraform apply -auto-approve tfplan
+  #   # Terraform Apply
+  #   - name: Terraform Apply
+  #     run: terraform apply -auto-approve tfplan
+
+
+  #   # - name: Security Scan - TFSec
+  #   #   run: tfsec .
+  #   #   continue-on-error: true
+  #   #   working-directory: terraform/environments/${{ matrix.environment }}
+
+  #   # # Generates an execution plan for Terraform
+  #   # # An exit code of 0 indicated no changes, 1 a terraform failure, 2 there are pending changes.
+  #   # - name: Terraform Plan
+  #   #   id: plan
+  #   #   env:
+  #   #     ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+  #   #     ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+  #   #     ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+  #   #   run: |
+  #   #     export exitcode=0
+  #   #     terraform plan -detailed-exitcode -no-color -out tfplan || export exitcode=$?
+
+  #   #     echo "exitcode=$exitcode" >> $GITHUB_OUTPUT
+        
+  #   #     if [ $exitcode -eq 1 ]; then
+  #   #       echo Terraform Plan Failed!
+  #   #       exit 1
+  #   #     else 
+  #   #       exit 0
+  #   #     fi
+        
+  #   # # # Run a Terraform apply
+  #   # # - name: Terraform apply
+  #   # #   id: apply
+  #   # #   env:
+  #   # #     ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+  #   # #     ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+  #   # #     ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+  #   # #   run: terraform apply -auto-approve
