--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -1,14 +1,14 @@
-name: Pull Request
+name: Merge to Main and Apply
 
 on:
-  pull_request:
+  push:
     branches:
     - main
 
 env:
   TF_LOG: INFO
   # TFLINT_LOG
-  ARM_CLIENT_ID: "${{ secrets.AZURE_CLIENT_ID }}"
+  ARM_CLIENT_ID: "${{ secrets.AZURE_CLIENT_ID_APPLY }}"
   ARM_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
   ARM_TENANT_ID: "${{ secrets.AZURE_TENANT_ID }}"
   TF_VERSION: "${{ secrets.TF_VERSION }}"
@@ -18,7 +18,7 @@ permissions:
       contents: read
       security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
       issues: write
-      pull-requests: write
+      # pull-requests: write
 
 jobs: 
   terraform-plan:
@@ -45,7 +45,7 @@ jobs:
     - name: 'Az CLI login'
       uses: azure/login@v2
       with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        client-id: ${{ secrets.AZURE_CLIENT_ID_APPLY}}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
@@ -60,7 +60,7 @@ jobs:
         STORAGE_ACCOUNT: ${{ secrets.STORAGE_ACCOUNT }}
         CONTAINER_NAME: ${{ secrets.CONTAINER_NAME }}
         RESOURCE_GROUP_NAME: ${{ secrets.RESOURCE_GROUP_NAME }}
-        ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+        ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID_APPLY}}
         ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
       run: terraform init -backend-config="storage_account_name=$STORAGE_ACCOUNT" -backend-config="container_name=$CONTAINER_NAME" -backend-config="resource_group_name=$RESOURCE_GROUP_NAME"
@@ -73,7 +73,7 @@ jobs:
     # Run a Terraform validate
     - name: Terraform validate
       env:
-        ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+        ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID_APPLY}}
         ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
       run: terraform validate -no-color
@@ -83,7 +83,7 @@ jobs:
     - name: Terraform Plan
       id: plan
       env:
-        ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+        ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID_APPLY}}
         ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
       run: |
@@ -130,92 +130,90 @@ jobs:
       run: |
         echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
     
-    # If this is a PR post the changes
-    - name: Push Terraform Output to PR
-      if: github.ref != 'refs/heads/main'
-      uses: actions/github-script@v7
-      env:
-        SUMMARY: "${{ steps.tf-plan-string.outputs.summary }}"
-      with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const body = `${process.env.SUMMARY}`;
-            github.rest.issues.createComment({
-                issue_number: context.issue.number,
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                body: body
-            })
+    # # If this is a PR post the changes
+    # - name: Push Terraform Output to PR
+    #   if: github.ref != 'refs/heads/main'
+    #   uses: actions/github-script@v7
+    #   env:
+    #     SUMMARY: "${{ steps.tf-plan-string.outputs.summary }}"
+    #   with:
+    #       github-token: ${{ secrets.GITHUB_TOKEN }}
+    #       script: |
+    #         const body = `${process.env.SUMMARY}`;
+    #         github.rest.issues.createComment({
+    #             issue_number: context.issue.number,
+    #             owner: context.repo.owner,
+    #             repo: context.repo.repo,
+    #             body: body
+    #         })
 
-  # manual-approval:
-  #   name: Manual Approval
-  #   uses: trstringer/manual-approval@v1
-  #   with:
-  #     approvers: simon-vedder #user account of approvers
-  #     minimum-approvals: 1
-  #     issue-title: "Manual Approval Required for Terraform Apply"
-      
-  # terraform-apply:
-  #   name: 'Terraform Apply'
-  #   if: github.ref == 'refs/heads/main' && needs.terraform-plan.outputs.tfplanExitCode == 2
-  #   runs-on: ubuntu-latest
-  #   needs: [terraform-plan, manual-approval]
+  manual-approval:
+    name: Manual Approval
+    runs-on: ubuntu-latest
+    needs: terraform-plan
+    if: success() # Only proceed if terraform-plan job succeeds
     
-  #   steps:
-  #   # Checkout the repository to the GitHub Actions runner
-  #   - name: Checkout
-  #     uses: actions/checkout@v4
+    permissions:
+      issues: write
 
-  #   # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
-  #   - name: Setup Terraform
-  #     uses: hashicorp/setup-terraform@v3
+    steps:
+      - name: Await Manual Approval
+        uses: trstringer/manual-approval@v1
+        with:
+          secret: ${{ github.TOKEN }}
+          approvers: smarbar # Replace with GitHub usernames, with the free version you can only have an issue assigned to one username
+          minimum-approvals: 1
+          issue-title: "Manual Approval Required for Terraform Apply"
+          issue-body: "Please approve or deny the deployment."
+      
+  terraform-apply:
+    name: 'Terraform Apply'
+    if: github.ref == 'refs/heads/main' && needs.terraform-plan.outputs.tfplanExitCode == 2
+    runs-on: ubuntu-latest
+    needs: [terraform-plan, manual-approval]
+    
+    steps:
+    # Checkout the repository to the GitHub Actions runner
+    - name: Checkout
+      uses: actions/checkout@v6
 
-  #   # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-  #   - name: Terraform Init
-  #     run: terraform init
+    # Install the latest version of Terraform CLI 
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v3
+      with:
+        terraform_version: ${{ secrets.TF_VERSION }}
+        terraform_wrapper: false
+      
+    # Log into Azure with OIDC integration
+    - name: 'Az CLI login'
+      uses: azure/login@v2
+      with:
+        client-id: ${{ secrets.AZURE_CLIENT_ID_APPLY}}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-  #   # Download saved plan from artifacts  
-  #   - name: Download Terraform Plan
-  #     uses: actions/download-artifact@v6
-  #     with:
-  #       name: tfplan
+    # Run az commands to confirm sub access
+    - name: 'Run az commands'
+      run: |
+        az account show
+    
+    # Run Terraform init
+    - name: Terraform Init
+      env:
+        STORAGE_ACCOUNT: ${{ secrets.STORAGE_ACCOUNT }}
+        CONTAINER_NAME: ${{ secrets.CONTAINER_NAME }}
+        RESOURCE_GROUP_NAME: ${{ secrets.RESOURCE_GROUP_NAME }}
+        ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID_APPLY}}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+      run: terraform init -backend-config="storage_account_name=$STORAGE_ACCOUNT" -backend-config="container_name=$CONTAINER_NAME" -backend-config="resource_group_name=$RESOURCE_GROUP_NAME"
 
-  #   # Terraform Apply
-  #   - name: Terraform Apply
-  #     run: terraform apply -auto-approve tfplan
+    # Download saved plan from artifacts  
+    - name: Download Terraform Plan
+      uses: actions/download-artifact@v6
+      with:
+        name: tfplan
 
-
-  #   # - name: Security Scan - TFSec
-  #   #   run: tfsec .
-  #   #   continue-on-error: true
-  #   #   working-directory: terraform/environments/${{ matrix.environment }}
-
-  #   # # Generates an execution plan for Terraform
-  #   # # An exit code of 0 indicated no changes, 1 a terraform failure, 2 there are pending changes.
-  #   # - name: Terraform Plan
-  #   #   id: plan
-  #   #   env:
-  #   #     ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-  #   #     ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-  #   #     ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-  #   #   run: |
-  #   #     export exitcode=0
-  #   #     terraform plan -detailed-exitcode -no-color -out tfplan || export exitcode=$?
-
-  #   #     echo "exitcode=$exitcode" >> $GITHUB_OUTPUT
-        
-  #   #     if [ $exitcode -eq 1 ]; then
-  #   #       echo Terraform Plan Failed!
-  #   #       exit 1
-  #   #     else 
-  #   #       exit 0
-  #   #     fi
-        
-  #   # # # Run a Terraform apply
-  #   # # - name: Terraform apply
-  #   # #   id: apply
-  #   # #   env:
-  #   # #     ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-  #   # #     ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-  #   # #     ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-  #   # #   run: terraform apply -auto-approve
+    # Terraform Apply
+    - name: Terraform Apply
+      run: terraform apply -auto-approve tfplan
