--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches:
     - main
+    paths-ignore:
+    - '**/.github/workflows/**'
+    - '**/.devcontainer/**'
+    - '**/*.md'
+    - .gitignore
 
 env:
   TF_LOG: INFO
