Refactor Terraform version handling in workflow files to use vars instead of secrets

--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -16,7 +16,7 @@ env:
   ARM_CLIENT_ID: "${{ secrets.AZURE_CLIENT_ID_APPLY }}"
   ARM_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
   ARM_TENANT_ID: "${{ secrets.AZURE_TENANT_ID }}"
-  TF_VERSION: "${{ secrets.TF_VERSION }}"
+  TF_VERSION: "${{ vars.TF_VERSION }}"
 
 permissions:
       id-token: write
@@ -43,7 +43,7 @@ jobs:
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
       with:
-        terraform_version: ${{ secrets.TF_VERSION }}
+        terraform_version: ${{ vars.TF_VERSION }}
         terraform_wrapper: false
       
     # Log into Azure with OIDC integration
@@ -186,7 +186,7 @@ jobs:
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
       with:
-        terraform_version: ${{ secrets.TF_VERSION }}
+        terraform_version: ${{ vars.TF_VERSION }}
         terraform_wrapper: false
       
     # Log into Azure with OIDC integration
