--- a/.github/workflows/drift.yml
+++ b/.github/workflows/drift.yml
@@ -44,9 +44,9 @@ jobs:
     - name: 'Az CLI login'
       uses: azure/login@v2
       with:
-        client-id: $ARM_CLIENT_ID
-        tenant-id: $ARM_TENANT_ID
-        subscription-id: $ARM_SUBSCRIPTION_ID
+        client-id: ${{ env.ARM_CLIENT_ID }}
+        tenant-id: ${{ env.ARM_TENANT_ID }}
+        subscription-id: ${{ env.ARM_SUBSCRIPTION_ID }}
 
     # Run az commands to confirm sub access
     - name: 'Run az commands'
