--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -10,7 +10,6 @@ on:
     - '**/*.md'
     - .gitignore
 
-
 env:
   TF_LOG: INFO
   # TFLINT_LOG
@@ -39,7 +38,6 @@ jobs:
     # Run Terraform init
     - name: Terraform Init
       run: terraform init -backend=false
-      # run: terraform init -backend-config="storage_account_name=$STORAGE_ACCOUNT" -backend-config="container_name=$CONTAINER_NAME" -backend-config="resource_group_name=$RESOURCE_GROUP_NAME"
       
     - name: Terraform Format Check
       run: terraform fmt -check -recursive
@@ -51,7 +49,7 @@ jobs:
       uses: actions/cache@v5
       with:
         path: ~/.tflint.d/plugins
-        key: ${{ matrix.os }}-tflint-${{ hashFiles('.tflint.hcl') }}
+        key: tflint-${{ hashFiles('.tflint.hcl') }}
 
     - name: Setup TFLint
       uses: terraform-linters/setup-tflint@v4
@@ -63,9 +61,6 @@ jobs:
 
     - name: Init TFLint
       run: tflint --init
-      # env:
-        # https://github.com/terraform-linters/tflint/blob/master/docs/user-guide/plugins.md#avoiding-rate-limiting
-        # GITHUB_TOKEN: ${{ github.token }}
 
     - name: Run TFLint
       run: tflint -f compact
@@ -79,7 +74,6 @@ jobs:
       id: checkov
       uses: bridgecrewio/checkov-action@v12
       with:
-        # directory: example/examplea # Optional
         framework: terraform
         # This will add both a CLI output to the console and create a results.sarif file
         output_format: cli,sarif
