--- a/.github/workflows/run_id_test.yml
+++ b/.github/workflows/run_id_test.yml
@@ -18,13 +18,13 @@ jobs:
           echo "Detected latest run id of ${RUN_ID} for workflow ${WF_NAME}"
           echo "run-id=${RUN_ID}" >> "$GITHUB_OUTPUT"
         env:
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   
       - name: Download artifact from "Pull Request" workflow
         uses: actions/download-artifact@v6
         with:
           name: tfplan # Match name used in test.yml upload artifact step
-          github-token: ${{ github.token }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           repository: ${{ github.repository }}
           run-id: ${{ steps.get-run-id.outputs.run-id }}
       
