--- a/.github/workflows/run_id_test.yml
+++ b/.github/workflows/run_id_test.yml
@@ -3,6 +3,11 @@ name: Run ID
 on:
   workflow_dispatch:
 
+permissions:
+  id-token: write
+  contents: read
+  actions: read
+  
 jobs:
   build:
     runs-on: ubuntu-latest
