--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -26,6 +26,7 @@ permissions:
   contents: read
   security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
   issues: write
+  actions: read
   # pull-requests: write
 
 jobs: 
@@ -173,19 +174,20 @@ jobs:
     - name: Get run ID of "Pull Request" workflow
       id: get-run-id
       run: |
-        OTHER_REPO="${{ github.repository }}"
+        OTHER_REPO="smarbar/cust-GithubTesting--Terraform"
         WF_NAME="Pull Request"
-        RUN_ID=`gh run list --repo ${OTHER_REPO} --workflow ${WF_NAME} --json databaseId --jq .[0].databaseId`
+        RUN_ID=`gh run list --repo ${OTHER_REPO} --workflow "${WF_NAME}" --json databaseId --jq .[0].databaseId`
+        #gh run list --repo smarbar/cust-GithubTesting--Terraform --workflow "Pull Request" --json databaseId --jq .[0].databaseId
         echo "Detected latest run id of ${RUN_ID} for workflow ${WF_NAME}"
         echo "run-id=${RUN_ID}" >> "$GITHUB_OUTPUT"
       env:
-        GH_TOKEN: ${{ github.token }}
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Download artifact from "Pull Request" workflow
       uses: actions/download-artifact@v6
       with:
         name: tfplan # Match name used in test.yml upload artifact step
-        github-token: ${{ github.token }}
+        github-token: ${{ secrets.GITHUB_TOKEN }}
         repository: ${{ github.repository }}
         run-id: ${{ steps.get-run-id.outputs.run-id }}
     
