--- a/.github/workflows/run_id_test.yml
+++ b/.github/workflows/run_id_test.yml
@@ -9,29 +9,10 @@ permissions:
   actions: read
   
 jobs:
-  build:
+  context:
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Get run ID of "Pull Request" workflow
-        id: get-run-id
-        run: |
-          OTHER_REPO="smarbar/cust-GithubTesting--Terraform"
-          WF_NAME="Pull Request"
-          RUN_ID=`gh run list --repo ${OTHER_REPO} --workflow "${WF_NAME}" --json databaseId --jq .[0].databaseId`
-          #gh run list --repo smarbar/cust-GithubTesting--Terraform --workflow "Pull Request" --json databaseId --jq .[0].databaseId
-          echo "Detected latest run id of ${RUN_ID} for workflow ${WF_NAME}"
-          echo "run-id=${RUN_ID}" >> "$GITHUB_OUTPUT"
+      - name: output
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  
-      - name: Download artifact from "Pull Request" workflow
-        uses: actions/download-artifact@v6
-        with:
-          name: tfplan # Match name used in test.yml upload artifact step
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          repository: ${{ github.repository }}
-          run-id: ${{ steps.get-run-id.outputs.run-id }}
-      
-      - name: Show downloaded files
-        run: ls -la
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
