--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -21,7 +21,8 @@ env:
   RESOURCE_GROUP_NAME: ${{ secrets.RESOURCE_GROUP_NAME }}
   TF_VERSION: "${{ vars.TF_VERSION }}"
   GH_WORKFLOW_REPO: ${{ github.repository }}
-  WF_NAME: "Pull Request"
+  TF_PLAN_NAME: ${{ vars.TF_PLAN_NAME }}
+  WF_NAME: ${{ vars.TF_PLAN_JOB_NAME }}
 
 permissions:
   id-token: write
@@ -55,7 +56,7 @@ jobs:
     - name: Download artifact from "Pull Request" workflow
       uses: actions/download-artifact@v6
       with:
-        name: tfplan # Match name used in test.yml upload artifact step
+        name: $TF_PLAN_NAME # Match name used in test.yml upload artifact step
         github-token: ${{ secrets.GITHUB_TOKEN }}
         repository: ${{ github.repository }}
         run-id: ${{ steps.get-run-id.outputs.run-id }}
@@ -86,4 +87,4 @@ jobs:
 
     # Terraform Apply
     - name: Terraform Apply
-      run: terraform apply -auto-approve tfplan
+      run: terraform apply -auto-approve $TF_PLAN_NAME
