Disable Terraform wrapper in setup step

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -43,6 +43,7 @@ jobs:
       uses: hashicorp/setup-terraform@v3
       with:
         terraform_version: $TF_VERSION
+        terraform_wrapper: false
 
     # Run Terraform init
     - name: Terraform Init
